# harbinger

./: .gitignore  Cargo.toml  README.md
src/: blackhole.rs  dump.rs  error.rs  guide.rs  har.rs  js.rs  main.rs  server.rs
static/: app.js  harbinger_app.js  harbinger_worker.js  index.html  worker.js
test/cool.website/: absolute-iframe.html  absolute-script.js  index.html  relative-script.js
