[package]
name = "harbinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
har = { path = "../../etc/har-rs" }
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.40"
indicatif = "0.17.3"
console = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.96"
base64 = "0.21.2"
serde = "1.0.164"
reqwest = "0.11.18"
tokio = "1.29.1"
swc_core = { version = "0.100.1", features = [
    "common",
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast"
] }
swc_ecma_parser = "0.149.0"
swc = "0.283.0"
md5 = "0.7.0"
